--- a/hiveexportdata/src/main/resources/application.properties
+++ b/hiveexportdata/src/main/resources/application.properties
@@ -1,12 +1,1 @@
-
-spring.datasource.primary.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.primary.url = jdbc:mysql://localhost:3306/mybatis1?useUnicode=true&characterEncoding=utf-8
-spring.datasource.primary.username = root
-spring.datasource.primary.password = wangzhang
-
-spring.datasource.secondary.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.secondary.url = jdbc:mysql://localhost:3306/mybatis2?useUnicode=true&characterEncoding=utf-8
-spring.datasource.secondary.username = root
-spring.datasource.secondary.password = wangzhang
-
-#logging.file=log/log.log
+spring.profiles.active=dev
