提交打zip包的配置

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>hbasedemo</module>
         <module>hivedemo</module>
         <module>hiveexportdata</module>
+        <module>kafkademo</module>
     </modules>
 
 
