--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>hivedemo</module>
         <module>hiveexportdata</module>
         <module>kafkademo</module>
+        <module>KafkaService</module>
     </modules>
 
 
