提交新代码

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>hiveexportdata</module>
         <module>kafkademo</module>
         <module>KafkaService</module>
+        <module>nio-netty</module>
     </modules>
 
 
