--- a/nio-netty/pom.xml
+++ b/nio-netty/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.xq.tst</groupId>
-  <artifactId>kakfademo</artifactId>
+  <artifactId>nio-netty</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>kakfademo</name>
+  <name>nio-netty</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -23,24 +23,6 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-
-    <dependency>
-      <groupId>org.apache.kafka</groupId>
-      <artifactId>kafka-clients</artifactId>
-      <version>0.10.0.1</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>20.0</version>
-    </dependency>
-
-    <!--<dependency>
-      <groupId>org.apache.kafka</groupId>
-      <artifactId>kafka_2.10</artifactId>
-      <version>0.10.0.1</version>
-    </dependency>-->
   </dependencies>
 
   <build>
