--- a/kafkademo/pom.xml
+++ b/kafkademo/pom.xml
@@ -36,11 +36,11 @@
       <version>20.0</version>
     </dependency>
 
-    <!--<dependency>
+    <dependency>
       <groupId>org.apache.kafka</groupId>
       <artifactId>kafka_2.10</artifactId>
       <version>0.10.0.1</version>
-    </dependency>-->
+    </dependency>
   </dependencies>
 
   <build>
