--- a/nio-netty/pom.xml
+++ b/nio-netty/pom.xml
@@ -90,6 +90,57 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+        <plugin>
+          <groupId>org.jibx</groupId>
+          <artifactId>maven-jibx-plugin</artifactId>
+          <version>1.3.1</version>
+          <executions>
+            <execution>
+              <id>generate-java-code-from-schema</id>
+              <goals>
+                <goal>schema-codegen</goal>
+              </goals>
+              <configuration>
+                <directory>src/main/resources/xsd/reservation</directory>
+                <includes>
+                  <include>reservation.xsd</include>
+                </includes>
+                <verbose>true</verbose>
+                <defaultPackage>cn.com.shijinet.kunlun.kws.model</defaultPackage>
+              </configuration>
+            </execution>
+            <execution>
+              <id>compile-binding</id>
+              <goals>
+                <goal>bind</goal>
+              </goals>
+              <configuration>
+                <directory>target/generated-sources</directory>
+                <load>true</load>
+                <validate>true</validate>
+                <!--<verbose>true</verbose> -->
+                <verify>true</verify>
+              </configuration>
+            </execution>
+            <execution>
+              <id>generate-test-code-from-schema</id>
+              <phase>generate-test-sources</phase>
+              <goals>
+                <goal>test-schema-codegen</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>compile-test-binding</id>
+              <phase>process-test-classes</phase>
+              <goals>
+                <goal>test-bind</goal>
+              </goals>
+              <configuration>
+                <directory>target/generated-test-sources</directory>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
