--- a/nio-netty/pom.xml
+++ b/nio-netty/pom.xml
@@ -54,7 +54,16 @@
       <version>1.7.25</version>
       <!-- <scope>test</scope> -->
     </dependency>
-
+    <dependency>
+      <groupId>org.jboss.marshalling</groupId>
+      <artifactId>jboss-marshalling</artifactId>
+      <version>1.3.0.CR9</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.marshalling</groupId>
+      <artifactId>jboss-marshalling-serial</artifactId>
+      <version>1.3.0.CR9</version>
+    </dependency>
   </dependencies>
 
   <build>
