--- a/kafkademo/pom.xml
+++ b/kafkademo/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.xq.tst</groupId>
-  <artifactId>kakfademo</artifactId>
+  <artifactId>kafkademo</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>kakfademo</name>
+  <name>kafkademo</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
