--- a/hivedemo/pom.xml
+++ b/hivedemo/pom.xml
@@ -16,7 +16,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-
+<dependencyManagement>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -51,7 +51,7 @@
             <version>2.2.0</version>
         </dependency>
     </dependencies>
-
+</dependencyManagement>
     <build>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
             <plugins>
