--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,13 @@
         <module>nio-netty</module>
         <module>flinkdemo</module>
         <module>netty-demo</module>
+        <module>flink-cdc-mysql</module>
+        <module>flink-cdc-pg</module>
     </modules>
 
-
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 </project>
