--- a/hivedemo/pom.xml
+++ b/hivedemo/pom.xml
@@ -10,6 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>hivedemo</artifactId>
     <name>hivedemo</name>
+    <dependencies>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
