--- a/flink-cdc-mysql/pom.xml
+++ b/flink-cdc-mysql/pom.xml
@@ -59,7 +59,8 @@
       <groupId>com.ververica</groupId>
       <!-- add the dependency matching your database -->
       <artifactId>flink-connector-mysql-cdc</artifactId>
-      <version>2.0.0</version>
+<!--      <version>2.0.0</version>-->
+      <version>2.0-SNAPSHOT</version>
     </dependency>
 
     <dependency>
