--- a/flink-hive-sink/pom.xml
+++ b/flink-hive-sink/pom.xml
@@ -78,12 +78,12 @@
       <version>${hivemetastore.hadoop.version}-${flink.shaded.version}</version>
       <scope>provided</scope>
     </dependency>-->
-    <dependency>
+    <!--<dependency>
       <groupId>org.apache.flink</groupId>
       <artifactId>flink-shaded-hadoop-3-uber</artifactId>
       <version>3.1.1.7.2.9.0-173-9.0</version>
       <scope>provided</scope>
-    </dependency>
+    </dependency>-->
     <dependency>
       <groupId>com.alibaba</groupId>
       <artifactId>fastjson</artifactId>
