--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>flink-upsert-kafka</module>
         <module>flink-hive-sink</module>
         <module>flinkdemo_1.11.31</module>
+        <module>flinkdemo_1.14.0</module>
     </modules>
 
     <properties>
