--- a/flinkdemo_1.14.0/pom.xml
+++ b/flinkdemo_1.14.0/pom.xml
@@ -59,7 +59,7 @@
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-table-common</artifactId>
-            <version>1.14.0</version>
+            <version>${flink.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
