--- a/flink-upsert-kafka/pom.xml
+++ b/flink-upsert-kafka/pom.xml
@@ -16,7 +16,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <flink.version>1.13.1</flink.version>
+    <flink.version>1.14.2</flink.version>
   </properties>
 
   <dependencies>
@@ -40,11 +40,11 @@
       <artifactId>flink-table-planner_2.11</artifactId>
       <version>${flink.version}</version>
     </dependency>
-    <dependency>
+    <!--<dependency>
       <groupId>org.apache.flink</groupId>
       <artifactId>flink-table-planner-blink_2.11</artifactId>
       <version>${flink.version}</version>
-    </dependency>
+    </dependency>-->
     <dependency>
       <groupId>org.apache.flink</groupId>
       <artifactId>flink-table-api-scala-bridge_2.11</artifactId>
