--- a/kafka_kerberos/pom.xml
+++ b/kafka_kerberos/pom.xml
@@ -5,10 +5,12 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.xq.tst</groupId>
-  <artifactId>kafkademo</artifactId>
+  <artifactId>kafka_kerberos</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>kafkademo</name>
+  <name>kafka_kerberos</name>
+  <!-- FIXME change it to the project's website -->
+  <url>http://www.example.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -17,32 +19,25 @@
   </properties>
 
   <dependencies>
+
+    <dependency>
+      <groupId>org.apache.kafka</groupId>
+      <artifactId>kafka-clients</artifactId>
+      <version>2.8.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.kafka</groupId>
+      <artifactId>kafka_2.13</artifactId>
+      <version>2.8.1</version>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-
-    <dependency>
-      <groupId>org.apache.kafka</groupId>
-      <artifactId>kafka-clients</artifactId>
-<!--      <version>0.10.0.1</version>-->
-      <version>2.8.0</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>20.0</version>
-    </dependency>
-
-    <!--<dependency>
-      <groupId>org.apache.kafka</groupId>
-      <artifactId>kafka_2.11</artifactId>
-&lt;!&ndash;      <version>0.10.0.1</version>&ndash;&gt;
-      <version>2.8.0</version>
-    </dependency>-->
   </dependencies>
 
   <build>
