--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <module>flink-upsert-kafka</module>
         <module>flink-hive-sink</module>
         <module>flinkdemo_1.14.0</module>
-        <module>kafka_kerberos</module>
+        <module>kafka-kerberos</module>
         <module>flinkdemo_1.11.3</module>
         <module>tst-project</module>
     </modules>
