--- a/flinkdemo_1.11.3/pom.xml
+++ b/flinkdemo_1.11.3/pom.xml
@@ -87,7 +87,7 @@
                             <configuration>
                                 <transformers>
                                     <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                        <mainClass>com.xq.tst.App</mainClass>
+                                        <mainClass>com.xq.tst.app.App</mainClass>
                                     </transformer>
                                 </transformers>
                             </configuration>
@@ -104,7 +104,7 @@
                         <archive>
                             <manifest>
                                 &lt;!&ndash; 此处指定main方法入口的class &ndash;&gt;
-                                <mainClass>com.xq.tst.App</mainClass>
+                                <mainClass>com.xq.tst.app.App</mainClass>
                             </manifest>
                         </archive>
                     </configuration>
