--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>kafka-kerberos</module>
         <module>flinkdemo_1.11.3</module>
         <module>tst-project</module>
+        <module>CompletableFutureTst</module>
     </modules>
 
     <properties>
