--- a/VertxTst/pom.xml
+++ b/VertxTst/pom.xml
@@ -9,9 +9,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>tst-project</artifactId>
+    <artifactId>VertxTst</artifactId>
 
-    <name>tst-project</name>
+    <name>VertxTst</name>
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
 
@@ -22,16 +22,10 @@
     </properties>
 
     <dependencies>
-
         <dependency>
-            <groupId>javax.mail</groupId>
-            <artifactId>mail</artifactId>
-            <version>1.4.7</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-codec</groupId>
-            <artifactId>commons-codec</artifactId>
-            <version>1.13</version>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-jdbc-client</artifactId>
+            <version>4.3.0</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
@@ -39,24 +33,9 @@
             <version>5.1.47</version>
         </dependency>
         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.5</version>
-        </dependency>
-        <!--<dependency>
-          <groupId>IKExpression</groupId>
-          <artifactId>IKExpression</artifactId>
-          <version>2.1.2</version>
-        </dependency>-->
-        <dependency>
-            <groupId>org.java-websocket</groupId>
-            <artifactId>Java-WebSocket</artifactId>
-            <version>1.3.0</version>
-        </dependency>
-        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>4.11</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
