--- a/tst-project/pom.xml
+++ b/tst-project/pom.xml
@@ -22,7 +22,11 @@
     </properties>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.apache.avro</groupId>
+            <artifactId>avro</artifactId>
+            <version>1.11.0</version>
+        </dependency>
         <dependency>
             <groupId>javax.mail</groupId>
             <artifactId>mail</artifactId>
