--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>completablefuture-tst</module>
         <module>vertx-tst</module>
         <module>redisson-tst</module>
+        <module>esdemo</module>
     </modules>
 
     <properties>
