--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>redisson-tst</module>
         <module>esdemo</module>
         <module>hudidemo</module>
+        <module>icebergdemo</module>
     </modules>
 
     <properties>
