--- a/completablefuture-tst/pom.xml
+++ b/completablefuture-tst/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>CompletableFutureTst</artifactId>
+    <artifactId>completablefuture-tst</artifactId>
 
     <name>CompletableFutureTst</name>
     <!-- FIXME change it to the project's website -->
