--- a/kafka-kerberos/pom.xml
+++ b/kafka-kerberos/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.xq.tst</groupId>
-  <artifactId>kafka_kerberos</artifactId>
+  <artifactId>kafka-kerberos</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <name>kafka_kerberos</name>
