--- a/vertx-tst/pom.xml
+++ b/vertx-tst/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>VertxTst</artifactId>
+    <artifactId>vertx-tst</artifactId>
 
     <name>VertxTst</name>
     <!-- FIXME change it to the project's website -->
