--- a/completablefuture-tst/pom.xml
+++ b/completablefuture-tst/pom.xml
@@ -22,6 +22,11 @@
     </properties>
 
     <dependencies>
+        <!--<dependency>
+            <groupId>com.data-artisans</groupId>
+            <artifactId>frocksdbjni</artifactId>
+            <version>5.17.2-artisans-2.0</version>
+        </dependency>-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
