--- a/flink/flinkdemo_1.17.1/pom.xml
+++ b/flink/flinkdemo_1.17.1/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>flinkdemo-1.17.1</artifactId>
+    <artifactId>flinkdemo_1.17.1</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
