--- a/flink/pom.xml
+++ b/flink/pom.xml
@@ -29,5 +29,6 @@
         <module>flinkdemo_1.14.14</module>
         <module>flinkdemo_1.12.1</module>
         <module>flinkdemo_1.17.1</module>
+        <module>flinkdemo_1.19.1</module>
     </modules>
 </project>
